Fix tabs on mobile

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -226,7 +226,7 @@ footer {
         height: 18px;
         margin: 0 auto;
         margin-top: 20px;
-        width: 180px;
+        width: 275px;
     }
 
     .item {
